Fix spacing between the header and the nav

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,7 @@
   text-align: center;
 
   padding: 3rem 8rem;
-  padding-bottom: 10rem;
+  padding-bottom: 8rem;
 
   background-image: url('../assets/bg-pattern-intro.svg'),
     linear-gradient(
