--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   align-items: center;
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
 
   &__logo {
     margin-right: 3rem;
